--- a/index.html
+++ b/index.html
@@ -194,6 +194,13 @@ background:  rgb(195, 246, 248);
     border-radius: 20px;
     background:  rgb(195, 246, 248);
 }
+.ac{
+  margin: 10px;
+    padding: 20px;
+    border: 10px;
+    border-radius: 20px;
+    background:  rgb(195, 246, 248);
+}
 .group{
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -398,6 +405,13 @@ fieldset a:hover{
                 
             </ul>
             <a href="https://en.wikipedia.org/wiki/Psychological_stress#:~:text=Studies%20have%20shown%20that%20exercise,%2C%20and%20improves%20self%2Desteem.">Know More <i class="ri-information-line"></i></a>
+        </div>
+        <div class="ac">
+          <h2> <b>Acknowledgment</b></h2>
+          <img src="https://mylocalweb.files.wordpress.com/2017/06/images.jpg?w=640" alt="" width="40%">
+          <iframe width="400" height="260" src="https://www.youtube.com/embed/wr4N-SdekqY?si=9K6i22oUSM4994TN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <p>One possible way of helping an individual to acknowledge the impact that stress is having on them is to use a self-report questionnaire. In our work with managers and clinicians, we use the Emotions and Behaviour at Work questionnaire. This looks at a person’s ability to manage the critical emotions and underlying behaviour traits that predict performance in a work setting.</p>
+              <a href="https://en.m.wikipedia.org/wiki/Stress_management">Know More <i class="ri-information-line"></i></a>
         </div>
         <div class="co">
             <h2>
